--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "retax-di",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.0",
   "description": "Dependency injection for retax",
   "main": "lib/index.js",
   "jsnext:main": "es/index.js",
